--- a/Notification/app/src/main/res/layout/activity_second.xml
+++ b/Notification/app/src/main/res/layout/activity_second.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".SecondActivity">
 
+<!--    Status text TextView -->
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
